--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,7 @@
     <p>Desenvolvedora: Geovana Hikari</p>
     <br>
        <a href="https://api.whatsapp.com/send?phone=5513934567828"><p>+55 11 93456-7828</p></a>
-         <a href="mailto:g.hikari@aluno.ifsp.edu.br?subject=...&body=..."><p>Gmail : G.hikari@aluno.ifsp.edu.br </p> </a>
+         <a href="mailto:deusaathena@gmail.com.br"><p>Gmail : deusaathena@gmail.com.br</p> </a>
   <a href="https://www.instagram.com/"><p>intagram: @Athena_divonica</p></a>
 </div>
 <div id="rodape">
