--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
         </div>
         
    <div class="perfil">
-   <img src="imagens/desenvolvedora.jpeg" alt="perfil" height="200" width="140" > </div>
+   <img src="imagens/perfil.jpg" alt="perfil" height="200" width="140" > </div>
    <div class="contato">
     <p>Desenvolvedora: Geovana Hikari</p>
     <br>
